Thu Nov 22 19:08:23 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extra.c: fixed xsltDebug() to output with the normal
	  error routines
	* tests/namespaces/*: updated the tests to separate stdout and
	  stderr
	* libxslt/transform.c: increasing xsltMaxDepth to 5000

Thu Nov 22 12:09:56 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in libexslt/Makefile.am: more Makefile fixups

Wed Nov 21 16:29:04 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in libexslt/Makefile.am: trying to fix more Makefiles
	  crapola
	* libxslt/transform.c: small fix.

Tue Nov 13 16:16:41 CET 2001 Daniel Veillard <daniel@veillard.com>

	* vms/* Makefile.am: included OpenVMS port instructions from
	  John A Fotheringham, integrated in the tar file.

Mon Nov 12 22:46:26 CET 2001 Daniel Veillard <daniel@veillard.com>

	* win32/dsp/* xsltproc/xsltproc.c libxslt/transform.c: Patches
	  from Igor for Windows
	* libxslt/xslt.h: try to fix the  LIBXSLT_PUBLIC mess

Sun Nov 11 21:15:05 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing bug #64298 reported by T. V. Raman

Sat Nov 10 14:01:44 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.7
	* libxslt.spec.in: cleanup similar to libxml2 one
	* breakpoint/*.[hc]: finished cleaning up contributed code
	* doc/*: updated and rebuilt the documentation
	* xsltproc/xsltproc.c: cleanup of the timing code
	* xsltproc/Makefile.am: auto* sucks
	* libxslt/transform.c: added a missing include

Mon Nov  5 14:29:26 CET 2001 Daniel Veillard <daniel@veillard.com>

	* Makefile.am acconfig.h config.h.in configure.in 
	  xsltproc/Makefile.am breakpoint/* libxslt/transform.[ch]
	  libxslt/xsltconfig.h.in:  Applied Keith Isdale patch for
	  the debugger support, make it the default, added the
	  WITH_XSLT_DEBUGGER define to xsltconfig.h.in, small cleanups

Fri Nov  2 11:19:49 CET 2001 Daniel Veillard <daniel@veillard.com>
