@@ -1,3 +1,8 @@
+Sun Nov 25 15:52:38 CET 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/transform.c: fixed a bug in the document extension
+	  element where the doctype infos were not taken into account.
+
 Thu Nov 22 19:08:23 CET 2001 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/extra.c: fixed xsltDebug() to output with the normal
